--- a/Exercice5/index.html
+++ b/Exercice5/index.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
-    <title>Page sans Accessibilité</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Page Accessible</title>
 </head>
 <body>
-<h1>Titre de la Page</h1>
-<p>Ceci est un paragraphe de texte.</p>
+    <header>
+        <h1>Titre de la Page</h1>
+    </header>
+    <main>
+        <p>Ceci est un paragraphe de texte.</p>
+        <form>
+            <label for="name">Nom :</label>
+            <input id="name" type="text" placeholder="Entrez votre nom">
 
-<!-- Formulaire sans étiquette pour les champs -->
-<form>
-    <input id="name" type="text" placeholder="Entrez votre nom">
-    <input id="email" type="email" placeholder="Entrez votre adresse e-mail">
-    <button type="submit">Envoyer</button>
-</form>
+            <label for="email">Adresse e-mail :</label>
+            <input id="email" type="email" placeholder="Entrez votre adresse e-mail">
 
-<!-- Image sans attribut alt -->
-<img src="assets/image.png" height=250>
-
-<!-- Lien sans texte descriptif -->
-<a href="#">Cliquez ici</a>
+            <button type="submit">Envoyer</button>
+        </form>
+        <img src="assets/image.png" alt="Description de l'image" height="250">
+        <a href="#section-information">Voir plus d'informations sur cette page</a>
+    </main>
+    <section id="section-information">
+        <h2>Informations supplémentaires</h2>
+        <p>Cette section contient des informations additionnelles utiles pour les visiteurs.</p>
+    </section>
+    <footer>
+        <p>&copy; 2025 Mon Site Web Accessible</p>
+    </footer>
 </body>
 </html>
