--- a/Exercice7/index.html
+++ b/Exercice7/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Convertisseur décimal vers binaire</h1>
-<input type="text" id="decimalInput" placeholder="Entrez un nombre décimal">
+<input type="number" id="decimalInput" placeholder="Entrez un nombre décimal">
 <button onclick="convertToBinary()">Convertir</button>
 <p id="binaryResult"></p>
 
